# linux_max6675

./: Cargo.toml  README.md  deny.toml
.githooks/: pre-push
.github/workflows/: ci.yml
examples/: duo.rs
src/: connection.rs  lib.rs  temperature.rs
